--- a/ecommerce-kuki/src/components/ItemListContainer/ItemListContainer.css
+++ b/ecommerce-kuki/src/components/ItemListContainer/ItemListContainer.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Geologica:wght@300;500;800&display=swap');
 
-h2, span  {
+h2 {
     font-family: 'Geologica';
     font-weight: 800;
     color: rgb(43, 43, 43);
