--- a/ecommerce-kuki/src/components/NavBar/NavBar.css
+++ b/ecommerce-kuki/src/components/NavBar/NavBar.css
@@ -18,18 +18,21 @@ header{
 li {
     display: inline-block;
     margin: 1rem;
+}
+
+.Menu{
     cursor: pointer;
     color: rgb(0, 183, 255);
     text-decoration: none;
     font-size: 1.2em;
     font-weight: 500;
-    display: inline-block;
     font-family: 'Geologica';
 }
-
-li:hover {
+.Menu:hover {
+    text-decoration: none;
     color: rgb(209, 96, 30);
 }
+
 
 .KukiLogo {
     width: 6rem;
